
    * Attack bitset to force the heroes to run away [James Paige]

    * General bitset to "Disable Hero's Battle Cursor" [Yuriy]
    
    * Attack option to set a tag (with a number of options relating to what
      triggers the tag, and conditional to another tag) [Mike Caron]

  * Bug Fixes

    * Fixed bug 107: "An MP~ stat over 66 makes all spells free"
      [Ralph Versteegen]

    * c and v no longer appended to a string when copying and pasting
      [Ralph Versteegen]

    * renamed attack bitset "No Reward from target" to
      "Erase rewards (Enemy target only)" to clarify that it
      happens even if the attack does not kill the target

  * New Plotscripting Commands

    * "cancel map name display" [James Paige]
    * "seconds of play", "set days of play", "set hours of play",
      "set minutes of play", "set seconds of play" [Mike Caron]
    * "read NPC" (counterpart of alter NPC) [James Paige]

  * Stuff only Developers Will Notice

October 03 2005 [rusalka]

  * Bug-Fixes

    * Fixed bug 18: "In the map editor, CTRL+F doesn't use default
      passability" [Ralph Versteegen]

    * Fixed bug 76: "Hitting two keys at the same time allows you to
      overflow text-entry fields" [James Paige]

    * Fixed a bug that allowed argument values to pre-fill local
      variables in scripts that did not have enough arguments declared
      (It is now safe to assume that all your local variables will
      start out set to zero) [James Paige]

    * Fixed bug 81: "fight formation() with an invalid formation would
      start a battle which would immediately end" [Yuriy]

    * To bring up the Joystick calibration screen, you should now
      press CTRL+J rather than just J

    * Fixed bug 85: "menu called when exiting a script triggered menu or
      screen with ESC" [Yuriy and Ralph Versteegen]

    * Fixed bug 86: "Foot offset is not taken into account when culling
      npcs and heroes to draw onscreen" [Ralph Versteegen]
