@@ -189,6 +189,10 @@ define function, begin
 180,mapwidth,0              # returns map height in tiles
 181,mapheight,0             # returns map width in tiles
 182,readNPC,2,0,0           # reads information about an NPC on the current map (corresponds to alterNPC)
+183,setherolevel,3,0,0,1    # change a hero's level
+184,giveexperience,2,-1,1   # (who, how much) gives a hero or the active party experience
+185,herolevelled,1,0        # number of levels gained last battle/giveexperience command.
+186,spellslearnt,2,0,0      # number spells and spell ids hero learnt at last battle/giveexperience command.
 
 200,system hour,0
 201,system minute,0
@@ -937,4 +941,5 @@ define constant, begin
 0, Crop
 1, Wrap
 2, Defaulttile
+-1,party
 end
